Docker flags (#894)
* dind gpu fix: remove broken flags

* dind gpu fix for SHMEM: add hostIpc=true in vm-pod-template

* fix portal dependencies

* fix test dependencies

* add netty dependency to portal

* change shm-size